--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "prepare": "pnpm run build"
+    "prepare": "npm run build"
   },
   "dependencies": {
     "firebase": "^10.0.0"
