--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taskratchet-sdk",
+  "name": "@taskratchet/sdk",
   "version": "0.0.0",
   "type": "module",
   "types": "./dist/taskratchet-sdk.d.ts",
