--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@taskratchet/sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "types": "./dist/taskratchet-sdk.d.ts",
   "main": "./dist/taskratchet-sdk.umd.cjs",
@@ -11,6 +11,9 @@
       "require": "./dist/taskratchet-sdk.umd.cjs"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
