--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@taskratchet/sdk",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "type": "module",
   "types": "./dist/taskratchet-sdk.d.ts",
   "main": "./dist/taskratchet-sdk.umd.cjs",
@@ -25,10 +25,11 @@
     "firebase": "^10.0.0"
   },
   "devDependencies": {
+    "jsdom": "^25.0.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0",
-    "vite-plugin-dts": "^3.2.0",
-    "vitest": "^0.33.0",
-    "vitest-fetch-mock": "^0.2.1"
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.3.0",
+    "vitest": "^2.1.5",
+    "vitest-fetch-mock": "^0.4.2"
   }
 }
