--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "prepare": "npm run build",
-    "prepublish": "npm run test"
+    "prepublish": "npm run test",
+    "checkTs": "tsc --noEmit"
   },
   "dependencies": {
     "@hyper-fetch/core": "^5.7.5",
